--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL = mongodb+srv://kqyang:kqyang@cluster0.dhqdn9m.mongodb.net/
+MONGO_URL = mongodb+srv://kqyang:kqyang@cluster0.dhqdn9m.mongodb.net/COMP_584_Project?retryWrites=true&w=majority
 PORT=5555
